[package]
name = "ascii"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
resize = "0.5.5"
v4l = {git = "https://github.com/raymanfx/libv4l-rs", branch= "next"}
